templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  type: NodePort
  selector:
    app: myportfolio-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: front-nginx-svc
# spec:
#   type: NodePort
#   selector:
#     app: myportfolio-nginx
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
#       nodePort: 30080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: front-nodejs-svc
# spec:
#   selector:
#     app: myportfolio-nodejs
#   ports:
#     - protocol: TCP
#       port: 5173
#       targetPort: 5173
#   type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: NodePort
  selector:
    app: myportfolio-fastapi
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30800
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
spec:
  type: NodePort
  selector:
    app: myportfolio-chatbot
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 30801
